# langchain_mcp

./: README.md  config.yaml  exec_all.bat  exec_dual.bat  exec_litellmproxy.bat  exec_mcpproxy.bat  exec_pytest.bat  exec_single.bat  langchain_mcp_utils.py  main.py  main_dual.py  pyproject.toml  requirements.txt  server_params.json  test_langchain_mcp_utils.py
licenses/: get_licenses.bat  licenses.csv
