[project]
name = "langchain-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain==0.3.27",
    "langchain-mcp-adapters==0.1.9",
    "langchain-openai==0.3.28",
    "langgraph==0.5.4",
    "mcp==1.12.4",
    "gradio==5.39.0",
    "aiofiles==24.1.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "attrs==25.3.0",
    "brotli==1.1.0",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "distro==1.9.0",
    "fastapi==0.115.14",
    "ffmpy==0.6.1",
    "filelock==3.18.0",
    "fsspec==2025.7.0",
    "gradio-client==1.11.0",
    "greenlet==3.2.3",
    "groovy==0.1.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.34.4",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.0",
    "jsonschema-specifications==2025.4.1",
    "langchain-core==0.3.72",
    "langchain-text-splitters==0.3.9",
    "langgraph-checkpoint==2.1.1",
    "langgraph-prebuilt==0.5.2",
    "langgraph-sdk==0.1.74",
    "langsmith==0.4.8",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "numpy==2.3.2",
    "openai==1.99.9",
    "orjson==3.11.1",
    "ormsgpack==1.10.0",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pydub==0.25.1",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.18",
    "pytz==2025.2",
    "pywin32==311",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "regex==2025.7.34",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rich==13.7.1",
    "rpds-py==0.27.0",
    "ruff==0.12.7",
    "safehttpx==0.1.6",
    "semantic-version==2.10.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "sse-starlette==3.0.2",
    "starlette==0.46.2",
    "tenacity==9.1.2",
    "tiktoken==0.11.0",
    "tomlkit==0.13.3",
    "tqdm==4.67.1",
    "typer==0.16.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.29.0",
    "websockets==13.1",
    "xxhash==3.5.0",
    "zstandard==0.23.0",
    "litellm[proxy]==1.75.5.post1",
    "anthropic==0.62.0",
    "boto3==1.34.34",
    "botocore==1.34.162",
    "cohere==5.6.2",
    "fastavro==1.12.0",
    "iniconfig==2.1.0",
    "jmespath==1.0.1",
    "pandas-stubs==2.3.0.250703",
    "parameterized==0.9.0",
    "pluggy==1.6.0",
    "pytest==8.4.1",
    "replicate==1.0.7",
    "s3transfer==0.10.4",
    "tokenizers==0.21.4",
    "types-pytz==2025.2.0.20250809",
    "types-requests==2.32.4.20250809",
    "litellm-enterprise==0.1.19",
    "litellm-proxy-extras==0.2.16",
]
